<resources>
    <string name="app_name">Stockapp</string>
    <string name="empty_view_title_text">The stock is empty :(</string>
    <string name="empty_view_subtitle_text">Get started by adding a product.</string>
    <string name="product_name">Product name</string>
    <string name="hint_supplier">Supplier\'s name</string>
    <string name="category_price">Price</string>
    <string name="supplier_overview">Supplier</string>
    <string name="category_quantity">Quantity</string>
    <string name="items_in_stock">items in stock</string>
    <string name="enter_quantity">Enter the quantity:</string>
    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product saved sucessfuly</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="hint_supplier_email">Supplier\'s email</string>
    <string name="order_items">Order items</string>
    <string name="email_subject">Order request:</string>
    <string name="quantity_must_positive">Quantity must be positive</string>
    <string name="sell_product">Sell product</string>
    <string name="quantity_nothing_to_sell">There\'s nothing to sell =(</string>
</resources>
