<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:inputType="numberDecimal"
                android:digits="0123456789.,"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="100dp"
                android:inputType="number" />

            <Button
                android:id="@+id/sub_quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/edit_product_quantity"
                android:text="-"/>

            <Button
                android:id="@+id/add_quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/sub_quantity"
                android:text="+"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_supplier_email"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/order_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/order_items"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
